<resources>
    <string name="app_name">MyMovieV2</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TV show</string>
    <string name="poster">poster</string>
    <string name="judul">Title</string>
    <string-array name="director">
        <item>James Wan</item>
        <item>Bradley Cooper</item>
        <item>Joe Russo and Anthony Russo</item>
        <item>Susanne Bier</item>
        <item>Bryan Singer</item>
        <item>Travis Knight</item>
        <item>Steven Caple Jr.</item>
        <item>David Leitch</item>
        <item>Dean DeBlois</item>
        <item>Tatsuya Nagamine</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh</item>
        <item>Rob Marshall</item>
        <item>Christian Rivers</item>
        <item>Aris Nugraha</item>
        <item>Otto Bathurst</item>
        <item>Rodney Rothman</item>
        <item>Fede Alvarez</item>
        <item>Clint Eastwood</item>
        <item>Ruben Fleischer</item>
    </string-array>
    <string name="top">Top</string>
    <string name="genre">Genre</string>
    <string name="kosong">not yet</string>
    <string name="rate">Rate</string>
    <string name="tanggal_tanyang">Date Lauching</string>
    <string name="date">Date</string>
    <string name="sinopsis">Synopsis</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</string>
    <string name="setting">Setting</string>
    <string-array name="Judul">
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Avenger Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon : Hidden World</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spiders Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="Rate">
        <item>68%</item>
        <item>75%</item>
        <item>83%</item>
        <item>70%</item>
        <item>81%</item>
        <item>65%</item>
        <item>76%</item>
        <item>65%</item>
        <item>76%</item>
        <item>74%</item>
        <item>65%</item>
        <item>63%</item>
        <item>66%</item>
        <item>60%</item>
        <item>66%</item>
        <item>58%</item>
        <item>84%</item>
        <item>60%</item>
        <item>65%</item>
        <item>66%</item>
    </string-array>
    <string-array name="Genre">
        <item>Fantasy</item>
        <item>Drama/Romance</item>
        <item>Fantasy</item>
        <item>Thriller Drama</item>
        <item>Biography</item>
        <item>Adventure</item>
        <item>Drama Sport</item>
        <item>Fantasy</item>
        <item>Adventure</item>
        <item>Adventure</item>
        <item>Mystery</item>
        <item>Thriller</item>
        <item>Adventure</item>
        <item>sci-fi</item>
        <item>Sinetron</item>
        <item>Laga</item>
        <item>Fantasy</item>
        <item>Drama</item>
        <item>Mystery</item>
        <item>Fantasy</item>
    </string-array>
    <string-array name="Date">
        <item>December 7, 2018</item>
        <item>October 3, 2018</item>
        <item>April 27, 2018</item>
        <item>December 13, 2018</item>
        <item> October 24, 2018</item>
        <item> December 15, 2018</item>
        <item> November 21, 2018</item>
        <item> December 11, 2018</item>
        <item> January 3, 2019</item>
        <item> December 14, 2018</item>
        <item> January 16, 2019</item>
        <item> October 19, 2018</item>
        <item> December 13, 2018</item>
        <item> November 27, 201</item>
        <item> January 17, 2019</item>
        <item> November 20, 2018</item>
        <item>December 6, 2018</item>
        <item> October 25, 2018</item>
        <item> December 14, 2018</item>
        <item> September 28, 2018</item>
    </string-array>
    <string-array name="Sinopsis">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpools PG-13 rendition of Deadpool 2 as a Princess Bride-esque story thats full of magic, wonder and zero Fs.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Earth is peaceful following the Tournament of Power. Realizing that the universes still hold many more strong people yet to see, Goku spends all his days training to reach even greater heights. Then one day, Goku and Vegeta are faced by a Saiyan called Broly who they ve never seen before. The Saiyans were supposed to have been almost completely wiped out in the destruction of Planet Vegeta, so whats this one doing on Earth? This encounter between the three Saiyans who have followed completely different destinies turns into a stupendous battle, with even Frieza (back from Hell) getting caught up in the mix.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup détat is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michaels three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item>We dont have an overview translated in English. Help us expand our database by adding one.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>Earl Stone, a man in his 80s, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, he’s just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="Top">
        <item>Jason Momoa, Amber Heard, Willem Dafoe</item>
        <item>Bradley Cooper, Sam Elliott, Andrew Dice Clay</item>
        <item>Robert Downey Jr, Chris Hemsworth, Chris Evans</item>
        <item>Trevante Rhodes, John Malkovich, Sarah Paulson</item>
        <item>Gwilym Lee, Ben Hardy, Joseph Mazzello</item>
        <item>Jorge Lendeborg Jr., John Cena, Jason Ian Drucker</item>
        <item>Michael B. Jordan, Sylvester Stallone, Dolph Lundgren</item>
        <item>Ryan Reynolds, Fred Savage, Josh Brolin</item>
        <item>Jay Baruchel, America Ferrera, F. Murray Abraham</item>
        <item>Masako Nozawa, Ryou Horikawa, Bin Shimada</item>
        <item>James McAvoy, Bruce Willis, Samuel L. Jackson</item>
        <item>Gerard Butler, Gary Oldman, Toby Stephens</item>
        <item>Emily Blunt, Lin-Manuel Miranda, Ben Whishaw</item>
        <item>Hera Hilmar, Robert Sheehan, Hugo Weaving</item>
        <item>Epy Kusnandar, Tya Arifin, Soraya Rasyid</item>
        <item>Taron Egerton, Jamie Foxx, Ben Mendelsohn</item>
        <item>Shameik Moore, Jake Johnson, Hailee Steinfeld</item>
        <item>Claire Foy, Sverrir Gudnason, Lakeith Stanfield</item>
        <item>Clint Eastwood, Bradley Cooper, Laurence Fishburne</item>
        <item>Tom Hardy, Michelle Williams, Riz Ahmed</item>
    </string-array>
</resources>